--- a/Cloud-storing/pages/html-pages/login.html
+++ b/Cloud-storing/pages/html-pages/login.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homemade Database</title>
-    <link rel="stylesheet" href="../css/general.css">
+    <link rel="stylesheet" media="(max-width:800px)" href="../css/general.css">
+    <link rel="stylesheet" href="../css/mobile.css">
+    <link rel="stylesheet" media="(min-width: 800px)" href="../css/desktop.css">
+    <link rel="shortcut icon" href="../../source/logo/DataBase.png" type="image/x-icon">
 </head>
 <body>
     <header>
-        <nav>
+        <div class="logo"></div>
+        <nav class="nav_buttons">
             <a href="#"><button>Login</button></a>
             <a href="#"><button>Cadastre-se</button></a>
             <a href="#"><button>Info</button></a>
         </nav>
+        <div class="show_nav_buttons"></div>
     </header>
     <main></main>
     <footer></footer>
