Mobile responsiveness adjustment

--- a/Cloud-storing/pages/html-pages/login.html
+++ b/Cloud-storing/pages/html-pages/login.html
@@ -11,13 +11,14 @@
 </head>
 <body>
     <header>
-        <div class="logo"></div>
-        <nav class="nav_buttons">
-            <a href="#"><button>Login</button></a>
-            <a href="#"><button>Cadastre-se</button></a>
-            <a href="#"><button>Info</button></a>
-        </nav>
+        <div class="logo-mobile"></div>
         <div class="show_nav_buttons"></div>
+        <nav class="nav_buttons container">
+           <button class="buttons">Login</button>
+           <button class="buttons">Cadastre-se</button>
+           <button class="buttons">Info</button>
+        </nav>
+        
     </header>
     <main></main>
     <footer></footer>
