--- a/Cloud-storing/pages/html-pages/login.html
+++ b/Cloud-storing/pages/html-pages/login.html
@@ -10,7 +10,9 @@
     <link rel="shortcut icon" href="../../source/logo/DataBase.png" type="image/x-icon">
 </head>
 <body>
+
     <header>
+        
         <div class="logo-mobile"></div>
         <div class="show_nav_buttons"></div>
         <nav class="nav_buttons container">
@@ -21,7 +23,7 @@
         
     </header>
     <main></main>
-    <footer></footer>
+    <footer>ALL RIGHTS RESERVED TO DEVgust4 &copy;</footer>
     <script src="../scripts/login.js"></script>
 </body>
 </html>
